@@ -1,4 +1,4 @@
-.TH "DISPASS" "1" "June 17, 2012" "0.1" "DisPass"
+.TH "DISPASS" "1" "June 25, 2012" "0.1" "DisPass"
 .SH NAME
 dispass \- DisPass Documentation
 .
@@ -60,9 +60,9 @@ documentation better.
 .INDENT 0.0
 .TP
 .B label
-A label is a string that you use to identify the password.
-This can be a domainname of the service the password is used for
-like e.g. \(aqgoogle.com\(aq.
+A label is a string that you use to identify the passphrase.
+This can be a domainname of the service the passphrase is used for,
+e.g. \(aqgoogle.com\(aq.
 .UNINDENT
 .sp
 Since this program asks for a password/passphrase to generate another
@@ -298,14 +298,16 @@ This can be a way for you to use different sets of labels/passphrases
 with a different \(aqmaster\(aq password for each set.
 .SH GOT EMACS? YOU CAN USE THE EMACS WRAPPER
 .sp
-If you have Emacs you can use the Emacs wrapper written by Tom Willemsen
-(ryuslash). Read more about it in the README of the \(aqemacs/\(aq folder.
+If you have Emacs you can use the Emacs wrapper created and maintained by
+Tom Willemsen (ryuslash).
+.sp
+You can find it at: \fI\%https://github.com/ryuslash/dispass.el\fP
 .SH SUPPORT / IDEAS / QUESTIONS / SUGGESTIONS
 .sp
 Please use the Issue tracker at github:
 \fI\%https://github.com/babab/DisPass/issues\fP
 .sp
-You can also visit #dispass at OFTC (irc.oftc.net) with your favortie
+You can also visit #dispass at OFTC (irc.oftc.net) with your favorite
 IRC client.
 .SH SOFTWARE LICENSE
 .sp
