@@ -7,7 +7,6 @@ Show all versions_ | Language: **English**
 .. toctree::
    :maxdepth: 2
 
-   emacs
    devdoc
 
 .. vim: set et ts=3 sw=3 sts=3 ai:
