@@ -6,7 +6,6 @@
 .. toctree::
    :maxdepth: 2
 
-   emacs
    devdoc
 
 .. vim: set et ts=3 sw=3 sts=3 ai:
